# viva_safeland

./: .gitignore  .ruff.toml  404.html  LICENSE  README.md  extra.css  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
about/: index.html
api/: index.html
docs/: about.md  api.md  index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
tests/: test_01.py  test_02.py
usage/: index.html
viva/: __init__.py  env.py  gui.py  launcher.py  main.py
viva/GUI/: forest-dark.tcl  forest-light.tcl
viva/modules/: __init__.py  hmi.py  hmi_old.py  render_drone.py  simulator.py
