[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viva-safeland"
version = "0.2.0"
description = "A new freeware for safe validation of vision-based navigation in aerial vehicles"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "pygame>=2.6.1",
    "typer>=0.17.3",
]

[project.scripts]
viva = "viva.launcher:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings[python]>=0.26.1",
]

[tool.setuptools.packages.find]
include = ["viva*"]

[tool.setuptools.package-data]
viva = [
    "GUI/**/*",
    "../docs/assets/viva_logo.png"
]
